# EliteCoder18.github.io

./: .gitignore  404.html  Cargo.toml  index.html  input-2f21c0359358f4ce.css  input-54ba36bb77c3f1b3.css  input-5a82db2f43a4ffed.css  input-cf15c13818094976.css  my-portfolio-3173189b045425fd.js  my-portfolio-3173189b045425fd_bg.wasm  my-portfolio-75f35b624bd9c18a.js  my-portfolio-75f35b624bd9c18a_bg.wasm  my-portfolio-7be2362b1aebd2cf.js  my-portfolio-7be2362b1aebd2cf_bg.wasm  my-portfolio-9efed97b467b172b.js  my-portfolio-9efed97b467b172b_bg.wasm  my-portfolio-aed078c6438825af.js  my-portfolio-aed078c6438825af_bg.wasm  my-portfolio-e4a2cfd86e4a072b.js  my-portfolio-e4a2cfd86e4a072b_bg.wasm  tailwind.config.js
.github/workflows/: deploy.yml
src/: app.rs  main.rs  models.rs
src/components/: block_pit.rs  console_guard.rs  contact_form.rs  experience.rs  footer.rs  mining_hero.rs  mod.rs  navbar.rs  project_card.rs  projects.rs  resume.rs
